# gym

./: database.db  main.py  pyproject.toml
static/: styl.css
templates/: index.html
