[tool.poetry]
name = "gym"
version = "0.1.0"
description = ""
authors = ["Dima2009-crupto <dimaparoldima1234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
jsonify = "^0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
